--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <meta property="og:description" content="work history and informations">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://your-domain.example/">
-  <meta property="og:image" content="assets/og-image.jpg">
+  <meta property="og:image" content="og-image.jpg">
 
   <script type="application/ld+json">
   {
@@ -23,7 +23,7 @@
     "@type": "Person",
     "name": "Sanket Sanap",
     "jobTitle": "Software Test Enginner - L2",
-    "image": "https://your-domain.example/assets/profile.png",
+    "image": "https://your-domain.example/profile.png",
     "url": "https://your-domain.example/",
     "sameAs": [
       "https://in.linkedin.com/in/sanket-sanap-a24a71121",
@@ -57,14 +57,14 @@
 
   <section id="about" class="hero">
     <div class="hero__bg">
-      <img src="assets/bg_automation.jpg" alt="" aria-hidden="true">
+      <img src="bg_automation.jpg" alt="" aria-hidden="true">
       <div class="hero__bg-overlay"></div>
     </div>
 
     <div class="hero__content">
       <div class="hero__identity">
         <!-- Add your own profile image at assets/profile.png -->
-        <img src="assets/profile.png" alt="Portrait of Sanket Sanap" class="hero__avatar">
+        <img src="profile.png" alt="Portrait of Sanket Sanap" class="hero__avatar">
         <div>
           <h1>Sanket Sanap (S.S.)</h1>
           <p class="roles">Software Test Engineer - L2</p>
