--- a/index.html
+++ b/index.html
@@ -173,22 +173,22 @@
     <aside class="edu-lang">
       <div>
         <h3>Education</h3>
-        <p><strong>PG-Diploma in DAC (C-DAC)</strong> — CDAC center, Thiruanantpuram</p>
+        <p class = "exp-card"><strong>PG-Diploma in DAC (C-DAC)</strong> — CDAC center, Thiruanantpuram - 2021</p>
       </div>
       <div>
         <h3>Education</h3>
-        <p><strong>B.E. (Electrical Engineering)</strong> — Savitribai Phule Pune University, 2020</p>
+        <p class = "exp-card"><strong>B.E. (Electrical Engineering)</strong> — SPPU, Pune - 2020</p>
       </div>
       <div>
         <h3>Languages</h3>
-        <p>Marathi (Native) · Hindi (Native) · English (Proficient)</p>
+        <p class = "exp-card"> Marathi (Native) · Hindi (Native) · English (Proficient)</p>
       </div>
     </aside>
   </section>
 
   <section id="contact" class="contact">
     <h2>Let’s Connect</h2>
-    <p>Ready to collaborate, learn, or transform your Automation Test journey?</p>
+    <p class = "exp-card">Ready to collaborate, learn, or transform your Automation Test journey?</p>
     <div class="contact-buttons">
       <a class="btn primary" href="mailto:mr.sanketsanap@gmail.com">Email</a>
       <a class="btn primary" href="tel:+919960065549">Call</a>
