--- a/index.html
+++ b/index.html
@@ -105,8 +105,6 @@
 </section>
 
 
-
-
   <section id="stats" class="stats" aria-labelledby="stats-title">
     <h2 id="stats-title">Impact in Numbers</h2>
     <div class="stats__grid" id="statsGrid"></div>
@@ -168,6 +166,7 @@
       <p class="exp-highlight">Achievement: Increased test coverage by <strong>67%</strong> via <strong>3000+</strong> scripts across projects.</p>
       <p class="exp-highlight">Achievement: <strong>90%</strong> Media (Wired/Wireless connectivity, Tuner, Audio) Test coverage</p>
       <p class="exp-highlight">Achievement: <strong>96%</strong> Connectivity (Multiple Wired/Wireless connectivity) Test coverage </p>
+      <p class="exp-highlight">Achievement: <strong>915+</strong> Issues found, using Automation Test across domains/projects</p>
     </article>
 
     <aside class="edu-lang">
