--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
       <a href="#portfolio-tabs">Project Discover</a>
       <a href="#experience">Experience</a>
       <a href="#contact">Contact</a>
+      <a href="SanketSanap_AutomationTestEngg.pdf">Resume Download</a>
     </nav>
 
     <button class="theme-toggle" type="button" aria-label="Toggle dark mode">
@@ -79,6 +80,7 @@
       <div class="hero__cta">
         <a class="btn primary" href="#portfolio-tabs">View My Work</a>
         <a class="btn primary" href="#experience">Experience</a>
+        <a class="btn primary" href="SanketSanap_AutomationTestEngg.pdf">Resume</a>
       </div>
       
     </div>
