--- a/index.html
+++ b/index.html
@@ -77,11 +77,11 @@
         </div>
       </div>
 
-      <div class="hero__cta">
+      <!-- <div class="hero__cta">
         <a class="btn primary" href="#portfolio-tabs">View My Work</a>
         <a class="btn primary" href="#experience">Experience</a>
         <a class="btn primary" href="SanketSanap_AutomationTestEngg.pdf">Resume</a>
-      </div>
+      </div> -->
       
     </div>
   </section>
