--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" data-theme="dark">
 <head>
   <meta charset="utf-8" />
-  <title>Sanket Sanap (S.S.) — QA Educator • Entrepreneur • Global Speaker</title>
+  <title>Sanket Sanap (S.S.) — Software Test Enginner L2</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="Portfolio profile of Sanket Sanap (S.S.): " />
 
