updated - with awards

--- a/index.html
+++ b/index.html
@@ -170,6 +170,8 @@
       <p class="exp-highlight">Achievement: <strong>90%</strong> Media (Wired/Wireless connectivity, Tuner, Audio) Test coverage</p>
       <p class="exp-highlight">Achievement: <strong>96%</strong> Connectivity (Multiple Wired/Wireless connectivity) Test coverage </p>
       <p class="exp-highlight">Achievement: <strong>915+</strong> Issues found, using Automation Test across domains/projects</p>
+      <p class="exp-highlight">Award - 1: <strong>Connectivity Domain - </strong> Delivered across JLR, Mahindra, and Tata Skylark, ensuring reliable connectivity features and timely releases.</p>
+      <p class="exp-highlight">Award - 2: <strong>OEM Specific - </strong> For outstanding accomplishment, commitment, hard work and creating business impact.</p>
     </article>
 
     <aside class="edu-lang">
